Added gcsfs dependency

--- a/config.yaml
+++ b/config.yaml
@@ -13,7 +13,7 @@ worker:
     - name: EXTRA_CONDA_PACKAGES
       value: numba xarray -c conda-forge
     - name: EXTRA_PIP_PACKAGES
-      value: s3fs dask-ml --upgrade
+      value: gcsfs s3fs dask-ml --upgrade
 
 # We want to keep the same packages on the worker and jupyter environments
 jupyter:
@@ -22,4 +22,4 @@ jupyter:
     - name: EXTRA_CONDA_PACKAGES
       value: numba xarray matplotlib -c conda-forge
     - name: EXTRA_PIP_PACKAGES
-      value: s3fs dask-ml --upgrade
+      value: gcsfs s3fs dask-ml --upgrade
